## Process this file with automake to produce Makefile.in

###############################################################################
##                                                                           ##
## Copyright (c) 2001 Morgan Stanley Dean Witter and Co. All rights reserved.##
## See ...#src#LICENSE for terms of distribution.                            ##
##                                                                           ##
##                                                                           ##
###############################################################################

EXTRA_DIST = ANNOUNCE LICENSE aclocal.m4 bootstrap.sh libtool fix4mipspro \
	fix4mac fix4cxx fix4netbsd fix4aix

SUBDIRS = config src

